--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
   },
   "dependencies": {
     "aos": "^2.3.4",
+    "devicon": "^2.17.0",
+    "i18next": "^25.5.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.7.3",
     "react-icons": "^5.4.0",
+    "react-router-dom": "^7.8.2",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1"
   },
